...
        android:layout_width="95dp"
        android:layout_height="36dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="32dp"
        android:text="@string/textNumeroUnoMultiplicacion"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumeroUno"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textNumeroDosMultiplicacion"
        android:layout_width="93dp"
        android:layout_height="35dp"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="32dp"
        android:text="@string/textNumeroDosMultiplicacion"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumeroDos"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumeroUno"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btonOperacionM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonHacerMultiplicacion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toEndOf="@+id/textViewResMultiplicacion"
        app:layout_constraintTop_toBottomOf="@+id/btonOperacionM" />

    <Button
        android:id="@+id/buttonRegresarMult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonRegresar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.987"
...
