...
    <TextView
        android:id="@+id/textViewIngNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:text="@string/textViewIngNum"
        app:layout_constraintEnd_toStartOf="@+id/editTextIngresarNumero"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextIngresarNumero"
...
    <TextView
        android:id="@+id/textViewIngNumDos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/textViewIngNumDos"
        app:layout_constraintEnd_toStartOf="@+id/editTextIngresarNumero2"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewIngNum" />

    <EditText
        android:id="@+id/editTextIngresarNumero2"
...
